# routes/api.php
@@ -66,6 +66,7 @@ Route::post('/rescates', [RescateController::class, 'store']);
 Route::post('/rescatesA', [RescateController::class, 'store2']);
 Route::put('/rescates', [RescateController::class, 'udpate']);
 Route::get('/rescates/{id}', [RescateController::class, 'show']);
+Route::delete('/rescates/{id}', [RescateController::class, 'destroy']);
 
 Route::get('/movimientos-animales', [MovimientosAnimalesController::class, 'index']);
 Route::post('/movimientos-animales', [MovimientosAnimalesController::class, 'store']);
